# schedulingAlgorithms

./: pyproject.toml
src/schedulingAlgorithms/bankersAlgorithm_janath_jsk/: bankersAlgorithm.py
src/schedulingAlgorithms/cpuScheduling/: fistComeFirstServe.py  roundRobin.py
src/schedulingAlgorithms_janath_jsk/: hrrn.py  multiFeedbackQueue.py  priority.py  shortestJobFirst
